load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "goshared",
    srcs = [
        "any.go",
        "bytes.go",
        "const.go",
        "duration.go",
        "enum.go",
        "in.go",
        "known.go",
        "ltgt.go",
        "map.go",
        "msg.go",
        "none.go",
        "num.go",
        "register.go",
        "repeated.go",
        "string.go",
        "timestamp.go",
        "wrapper.go",
    ],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates/goshared",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/shared",
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_lyft_protoc_gen_star_v2//:protoc-gen-star",
        "@com_github_lyft_protoc_gen_star_v2//lang/go",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":goshared",
    deprecation = "Use :goshared instead of :go_default_library.  Details about the new naming convention: https://github.com/bazelbuild/bazel-gazelle/pull/863",
    visibility = ["//visibility:public"],
)
