[package]
name = "envoy-proxy-dynamic-modules-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Envoy Proxy Authors <envoy-dev@googlegroups.com>"]
description = "Envoy Proxy Dynamic Modules Rust SDK"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/envoy"

[dependencies]
mockall = "0.13.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.0"
webpki-roots = "0.26"

[build-dependencies]
bindgen = "0.70.1"

[lib]
