[package]
name = "envoy-proxy-dynamic-modules-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Envoy Proxy Authors <envoy-dev@googlegroups.com>"]
description = "Envoy Proxy Dynamic Modules Rust SDK"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/envoy"

[dependencies]
log = "=0.4.27"
mockall = "0.13.1"

[build-dependencies]
bindgen = "0.70.1"

[lib]
