[package]
name = "envoy-rustls-ktls"
version = "0.1.0"
edition = "2021"
authors = ["Envoy Proxy Authors <envoy-dev@googlegroups.com>"]
description = "Rustls TLS transport socket with optional kTLS offload for Envoy dynamic modules"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/envoy"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { path = "../../../dynamic_modules/sdk/rust" }
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webpki-roots = "0.26"

[lib]
name = "envoy_rustls_ktls"
path = "rustls_ktls.rs"
crate-type = ["staticlib"]
