[package]
name = "test-programs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/envoy"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { path = "../../../../../source/extensions/dynamic_modules/sdk/rust" }

[[example]]
name = "no_op"
path = "no_op.rs"
crate-type = ["cdylib"]
