[package]
name = "envoy-hickory-dns-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Envoy Proxy Authors <envoy-dev@googlegroups.com>"]
description = "Hickory DNS resolver dynamic module for Envoy Proxy"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/envoy"

[dependencies]
hickory-resolver = { version = "0.25", features = ["system-config", "tokio", "tls-ring", "https-ring", "dnssec-ring", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

# Pin time to a version compatible with stable Rust.
time = ">=0.3.0, <0.3.37"

[lib]
name = "hickory_dns"
path = "hickory_dns.rs"
crate-type = ["staticlib"]
