load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "io_envoyproxy_pgv_grpc_proto",
    srcs = [
        "GooDBYe.proto",
        "hello.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//validate:validate_proto"],
)

go_proto_library(
    name = "io_envoyproxy_pgv_grpc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/envoyproxy/protoc-gen-validate/java/pgv-java-grpc/src/test/proto",
    proto = ":io_envoyproxy_pgv_grpc_proto",
    visibility = ["//visibility:public"],
    deps = ["//validate:validate_go"],
)

go_library(
    name = "proto",
    embed = [":io_envoyproxy_pgv_grpc_go_proto"],
    importpath = "github.com/envoyproxy/protoc-gen-validate/java/pgv-java-grpc/src/test/proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":proto",
    deprecation = "Use :proto instead of :go_default_library.  Details about the new naming convention: https://github.com/bazelbuild/bazel-gazelle/pull/863",
    visibility = ["//visibility:public"],
)
