load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "io_envoyproxy_pvg_cases_proto",
    srcs = [
        "embedded.proto",
        "enum.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//validate:validate_proto"],
)

go_proto_library(
    name = "io_envoyproxy_pvg_cases_go_proto",
    importpath = "java/pgv-java-stub/src/test/proto",
    proto = ":io_envoyproxy_pvg_cases_proto",
    visibility = ["//visibility:public"],
    deps = ["//validate:go_default_library"],
)
